EZE_TECN_PROYECTO_SIGEMAD/yaml/sigemad-manifests-main/ingress-sigemad-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sigemad-api
  namespace: ns-sigemad
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
spec:
  rules:
    - host: 86b614adf3a1.ngrok.app
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-backend
                port:
                  number: 8080
