EZE_TECN_PROYECTO_SIGEMAD/yaml/sigemad-manifests-main/ingress-sigemad-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sigemad-frontend
  namespace: ns-sigemad
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: 86b614adf3a1.ngrok.app
      http:
        paths:
          - path: /geoserver/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-geoserver
                port:
                  number: 8080
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-frontend
                port:
                  number: 80
